# fhir4ds

./: .gitmodules  AGENTS.md  CONTRIBUTING.md  NOTICE  README.md  architect_handoff.md  engineer_handoff.md  evolution.json  hatch_build.py  pyproject.toml  qa_handoff.md
.github/workflows/: deploy-website.yml
.temp/qa_iter51_70/: run_all.py
benchmarking/: AGENTS.md  COMPARISON.md  UPSTREAM_ISSUES.md  extract_expanded_valuesets.py  run_comparison.py
benchmarking/clinical-reasoning/: README.md  build.gradle.kts  gradlew  settings.gradle.kts
benchmarking/runner/: AGENTS.md  __init__.py  audit_perf_compare.py  cli.py  comparison.py  config.py  measure_runner.py  result_writer.py
benchmarks/: AGENTS.md  COMPARISON.md  extract_expanded_valuesets.py  run_comparison.py
benchmarks/output/: .gitignore  viewdef_test_report.json
benchmarks/output/comparison/: cql_py_runs.json  cr_run_1.json  cr_run_2.json  cr_run_3.json  cr_run_4.json  cr_run_5.json  cr_runs.json  summary_stats.json
benchmarks/output/cql-py/: all_measures_summary.json
benchmarks/parser_audit/: __init__.py  __main__.py  categorizer.py  reporter.py  scanner.py
benchmarks/runner/: __init__.py  __main__.py
conformance/: README.md
conformance/reports/: cql_report.json  dqm_report.json  fhirpath_report.json  final_compliance_report.md  viewdef_report.json
conformance/scripts/: conformance_log.py  run_all.py  run_cql.py  run_dqm.py  run_fhirpath.py  run_fhirpath_r4.py  run_viewdef.py
docs/architecture/: AUDIT_REPORT_2026Q2_REFRESH.md  CQL_TRANSLATOR_AUDIT_2026Q2.md
docs/notebooks/: cql.ipynb  dqm.ipynb  fhirpath.ipynb  viewdef.ipynb
extensions/cql/: AGENTS.md  CMakeLists.txt  Makefile  extension_config.cmake
extensions/cql/.cache/clangd/: compile_commands.json
extensions/cql/.cache/clangd/release/: compile_commands.json
extensions/cql/.cache/clangd/wasm_eh/: compile_commands.json
extensions/cql/scripts/: run_cql_conformance.py
extensions/cql/src/: cql_extension.cpp
extensions/cql/src/cql/: age.cpp  age.hpp  aggregate.cpp  aggregate.hpp  boundary.cpp  boundary.hpp  clinical.cpp  clinical.hpp  datetime.cpp  datetime.hpp  interval.cpp  interval.hpp  logical.cpp  logical.hpp  math.cpp  math.hpp  optional.hpp  quantity.cpp  quantity.hpp  ratio.cpp  ratio.hpp  valueset.cpp  valueset.hpp
extensions/cql/src/include/: cql_extension.hpp
extensions/cql/test/python/: conftest.py
extensions/cql/test/sql/: cql.test
extensions/fhirpath/: AGENTS.md  CMakeLists.txt  Makefile  extension_config.cmake
extensions/fhirpath/.cache/clangd/release/: compile_commands.json
extensions/fhirpath/.cache/clangd/wasm_eh/: compile_commands.json
extensions/fhirpath/.github/workflows/: build.yml
extensions/fhirpath/src/: fhirpath_extension.cpp
extensions/fhirpath/src/fhirpath/: arena_allocator.hpp  ast.hpp  evaluator.cpp  evaluator.hpp  expression_cache.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
extensions/fhirpath/src/include/: fhirpath_extension.hpp
extensions/fhirpath/src/include/shared/: ucum_units.hpp
extensions/fhirpath/test/python/: conftest.py
extensions/fhirpath/test/sql/: fhirpath.test
fhir4ds/: __init__.py  connection.py  core.py  measure.py
fhir4ds/cql/: __init__.py  errors.py  paths.py
fhir4ds/cql/dependency/: __init__.py  cache.py  errors.py  resolver.py  types.py
fhir4ds/cql/duckdb/: __init__.py  extension.py
fhir4ds/cql/evaluator/: __init__.py  context.py
fhir4ds/cql/loader/: __init__.py  fhir_loader.py
fhir4ds/cql/parser/: __init__.py  ast_nodes.py  lexer.py  parser.py
fhir4ds/cql/tests/: test_errors.py  test_evaluator.py
fhir4ds/cql/translator/: __init__.py  ast_helpers.py  ast_utils.py  column_generation.py  column_registry.py  component_codes.py  context.py  correlation.py  cte_builder.py  cte_manager.py  fhir_schema.py  (+21 more)
fhir4ds/dqm/: __init__.py  audit.py  errors.py  evaluator.py  models.py  narrative.py  parser.py  reactive.py  types.py
fhir4ds/fhirpath/: __init__.py
fhir4ds/sources/: AGENTS.md  README.md  __init__.py  base.py  csv.py  existing.py  filesystem.py  relational.py
fhir4ds/tests/: test_qc_regressions.py
fhir4ds/viewdef/: __init__.py  constants.py  errors.py  generator.py  join.py  parser.py  types.py  union.py  unnest.py  utils.py
scripts/: build_fhir_types.py  run_compliance.py
tests/output/: .gitignore
web/wasm-demo/: AGENTS.md  README.md  duckdb-node-worker-wrapper.cjs  fhircamila_data.json  index.html  package-lock.json  package.json  playwright.config.ts  test-duckdb.mjs  test-extension-load.mjs  test-extensions.html  tsconfig.json  vite.config.ts
web/website/: AGENTS.md  README.md  docusaurus.config.ts  package-lock.json  package.json  playwright.config.ts  sidebars.ts
(+1142 files in other folders)
